Updateted floorcorners calculation

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,29 @@
 
 /vcs.xml
 
-*.xml
+target/
+bin/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Compiled class file
-/*.class
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+target/
