--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,27 @@
-# Default ignored files
-/shelf/
-/.idea/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
+### Java template
+# Compiled class file
+*.class
 
-/vcs.xml
+# Log file
+*.log
 
-target/
-bin/
-!.mvn/wrapper/maven-wrapper.jar
+# BlueJ files
+*.ctxt
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
-target/
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+**/.idea/workspace.xml **/.idea/tasks.xml
+
